# pyeigen

./: .appveyor.yml  CMakeLists.txt  README.md  setup.py
conda.recipe/: meta.yaml
src/: main.cpp
tests/: test_basic.py
